syntax = "proto3";

import "google/protobuf/any.proto";
import "google/protobuf/struct.proto";

import "protolith/types/v1/api.proto";

package protolith.services.v1;

service EngineService {
    rpc Insert(InsertRequest) returns (InsertResponse);
    rpc Get(GetRequest) returns (GetResponse);
    rpc List(ListRequest) returns (ListResponse);
}

message InsertRequest {
    string database = 1;
    google.protobuf.Any data = 2;
}

message InsertResponse {
    string collection = 1;
    protolith.types.v1.ApiOp op = 2;
}

message GetRequest {
    string database = 1;
    string collection = 2;
    google.protobuf.Value key = 3;
}

message GetResponse {
    string collection = 1;
    google.protobuf.Any data = 2;
    protolith.types.v1.ApiOp op = 3;
}

message ListRequest {
    string database = 1;
    string collection = 2;
}

message ListResponse {
    string collection = 1;
    repeated google.protobuf.Any data = 2;
    protolith.types.v1.ApiOp op = 3;
}